<resources>

    <string name="app_name">MUSS</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Setting</string>
    <string name="title_activity_main">Mobile User Sensing System</string>
    <string name="preference_categary_server_info">Server Information</string>
    <string name="preference_categary_user_info">Account Information</string>
    <string name="preference_categary_sys_info">System Information</string>
    <string name="preference_categary_user_face">User Face</string>
    <string name="preference_text_username_dlg_title">User Name</string>
    <string name="preference_text_username_dlg_msg">Please input your username!</string>
    <string name="preference_text_username_title">User Name</string>
    <string name="preference_text_username_summary">Your user name</string>
    <string name="preference_text_password_dlg_title">Password</string>
    <string name="preference_text_password_dlg_msg">Please input your password!</string>
    <string name="preference_text_password_summary">Your user name</string>
    <string name="preference_text_password_title">Password</string>
    <string name="preference_text_address_dlg_title">Server Address</string>
    <string name="preference_text_address_dlg_msg">Please input the server address!</string>
    <string name="preference_text_address_summary">The address of the server</string>
    <string name="preference_text_address_title">Server Address</string>
    <string name="preference_text_port_dlg_title">Port Number</string>
    <string name="preference_text_port_dlg_msg">Please input the serve port number!</string>
    <string name="preference_text_port_summary">The port number of the server</string>
    <string name="preference_text_port_title">Port Number</string>
    <string name="preference_text_frequency_dlg_title">Frequency</string>
    <string name="preference_text_frequency_def_value">1 min</string>
    <string name="preference_text_frequency_summary">The frequency of gathering sensor information</string>
    <string name="preference_text_frequency_title">Frequency</string>
    <string name="title_activity_sensor_info_show">Sensor Information</string>
    <string name="view_sensor_last_collected_data">Last collected data</string>
    <string name="button_collect_and_send">Collect and Send</string>
    <string name="button_comm_stat_search">Search</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_service_not_bound">Please wait for the service starting.</string>
    <string name="dialog_send_result_info">The result of sending sensor information collected when</string>
    <string name="dialog_send_result_success">Success.</string>
    <string name="dialog_send_result_network">Failed due to network problem.</string>
    <string name="dialog_send_result_no_user">Failed due to unknown user.</string>
    <string name="dialog_search_result_prefix">The result of search</string>
    <string name="dialog_already_clicked">Please wait for previous read and send task to complete.</string>
    <string name="title_activity_comm_stat">Communication Statistics</string>
    <string name="table_column_phonenumber">Phone Number</string>
    <string name="table_column_sms">SMS</string>
    <string name="table_column_call">Call</string>
    <string name="toast_new_sensor_info">Fetched new sensor information!</string>
    <string name="toast_new_comm_stat">Fetched new communication stat!</string>
    <string name="toast_fetch_sensor_info">Start to fetch sensor information</string>
    <string name="toast_fetch_comm_info">Start to fetch communication stat</string>
    <string name="toast_fetch_new_face">Fetched new user face!</string>
    <string name="toast_wait">Please wait</string>
    <string name="text_current_pick">Current Pick: </string>
    <string name="text_current_search">Current Search: </string>
    <string name="text_all">All</string>
    <string name="text_null">Null</string>
    <string name="button_pick_search_date">Date</string>
    <string name="button_refresh_face">Refresh</string>
    <string name="pref_list_frequency_def_value">3</string>
    <string name="title_activity_setting">Setting</string>
    <string name="title_activity_sensor_info_search">Search</string>
	<string name="noti_content">MUUS is collecting your sensor info</string>
	<string name="grid_text_sensor">Sensor</string>
	<string name="grid_text_search">Search</string>
	<string name="grid_text_comm">Record</string>
	<string name="grid_text_setting">Setting</string>
	<string name="grid_text_bg">Background</string>
	<string name="grid_text_about">About</string>
</resources>