<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    
    <item android:id="@+id/menu_comm_stat_home"
          android:icon="@drawable/ic_action_home"
          android:title="@string/title_activity_main"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_comm_stat_sensor_info"
          android:icon="@drawable/ic_action_sensor_info"
          android:title="@string/title_activity_sensor_info_show"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_comm_stat_sensor_search"
          android:icon="@drawable/ic_action_search"
          android:title="Search"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_comm_stat_setting"
          android:icon="@drawable/ic_action_setting"
          android:title="@string/title_activity_setting"
          android:showAsAction="ifRoom|withText" />
     
</menu>