<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:id="@+id/menu_sensor_info_home"
          android:icon="@drawable/ic_action_home"
          android:title="@string/title_activity_main"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_sensor_info_comm_stat"
          android:icon="@drawable/ic_action_comm_stat"
          android:title="@string/title_activity_comm_stat"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_sensor_info_sensor_search"
          android:icon="@drawable/ic_action_search"
          android:title="Search"
          android:showAsAction="ifRoom|withText" />
    
    <item android:id="@+id/menu_sensor_info_setting"
          android:icon="@drawable/ic_action_setting"
          android:title="@string/title_activity_setting"
          android:showAsAction="ifRoom|withText" />
    
    
     
</menu>